[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/Main.gd" type="Script" id=1]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/Pixeled.tres" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_top = -0.00166667
anchor_bottom = -0.00166667
margin_left = 10.0
margin_top = 111.0
margin_right = 310.0
margin_bottom = 151.0
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="Buttons"]
margin_right = 148.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "HOST"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Connect" type="Button" parent="Buttons"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_constants/hseparation = 0
text = "CONNECT"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HostAndPort" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 50.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Host" type="LineEdit" parent="HostAndPort"]
margin_right = 190.0
margin_bottom = 40.0
hint_tooltip = "Address to connect to"
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.8
text = "localhost"
clear_button_enabled = true

[node name="Port" type="LineEdit" parent="HostAndPort"]
margin_left = 194.0
margin_right = 300.0
margin_bottom = 40.0
hint_tooltip = "Port to host or connect to"
size_flags_horizontal = 3
text = "1777"
clear_button_enabled = true

[node name="NameAndColor" type="HBoxContainer" parent="."]
anchor_top = 0.00833333
anchor_bottom = 0.00833333
margin_left = 10.0
margin_top = 55.0
margin_right = 310.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="NameAndColor"]
margin_top = 6.0
margin_right = 156.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
text = "Choose your color:"

[node name="Color" type="ColorPickerButton" parent="NameAndColor"]
margin_left = 160.0
margin_right = 300.0
margin_bottom = 40.0
size_flags_horizontal = 3
color = Color( 1, 0.996078, 0.996078, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerList" type="ItemList" parent="."]
margin_left = 10.0
margin_top = 160.0
margin_right = 310.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 320.0
margin_top = 10.0
margin_right = 790.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Arrows to MOVE
A / S to TILT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Buttons/Host" to="." method="_on_HostButton_button_up"]
[connection signal="button_up" from="Buttons/Connect" to="." method="_on_ConnectButton_button_up"]
